[tool.poetry]
name = "help-assistant"
version = "0.1.0"
description = "CLI help-assistant"
authors = ["Denys Zaitsev <denzai83@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "help_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "~=65.5.0"
prettytable = "~=3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
